# prisma-insensitive-test

./: Cargo.toml
.cargo/: config.toml
prisma/: schema.prisma
prisma/migrations/20220816125113_init/: migration.sql
prismax/: Cargo.toml
src/: main.rs  prisma.rs
