[package]
name = "prismax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", rev = "ee0d7d3efebb450ce3275cd06a123d45b5c6eed5"  }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", rev = "ee0d7d3efebb450ce3275cd06a123d45b5c6eed5"  }
